; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_drm_atomic.c_drm_object_free.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_drm_atomic.c_drm_object_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_object = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @drm_object_free(%struct.drm_object* %0) #0 {
  %2 = alloca %struct.drm_object*, align 8
  store %struct.drm_object* %0, %struct.drm_object** %2, align 8
  %3 = load %struct.drm_object*, %struct.drm_object** %2, align 8
  %4 = icmp ne %struct.drm_object* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.drm_object*, %struct.drm_object** %2, align 8
  %7 = call i32 @drm_object_free_properties(%struct.drm_object* %6)
  %8 = load %struct.drm_object*, %struct.drm_object** %2, align 8
  %9 = call i32 @talloc_free(%struct.drm_object* %8)
  br label %10

10:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @drm_object_free_properties(%struct.drm_object*) #1

declare dso_local i32 @talloc_free(%struct.drm_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
